--- a/ProjectSchool/SchoolProject/SchoolProject.csproj
+++ b/ProjectSchool/SchoolProject/SchoolProject.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\GaleriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MensagemController.cs" />
     <Compile Include="Controllers\TesteModelsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -1905,6 +1906,7 @@
     <Content Include="Views\Aluno\Index.cshtml" />
     <Content Include="Views\Email\Index.cshtml" />
     <Content Include="Views\Galeria\Index.cshtml" />
+    <Content Include="Views\Mensagem\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
